[gd_scene load_steps=69 format=3 uid="uid://cmm365jef52ho"]

[ext_resource type="Script" path="res://src/battle.gd" id="1_xbk6v"]
[ext_resource type="Texture2D" uid="uid://bajpej7cwruxm" path="res://Image/BG-A2.png" id="2_i5jaq"]
[ext_resource type="PackedScene" uid="uid://dv2ejdyrw8bpk" path="res://src/enemy.tscn" id="3_bsfho"]
[ext_resource type="Resource" uid="uid://ijiac1r710yp" path="res://src/Fighter.tres" id="4_ky74l"]
[ext_resource type="Resource" uid="uid://djig52rnheww4" path="res://src/Cleric.tres" id="5_avpfh"]
[ext_resource type="Resource" uid="uid://dywgcsu2hj36k" path="res://src/Mage.tres" id="7_luad1"]
[ext_resource type="Texture2D" uid="uid://bqgttrqxpwnl4" path="res://Image/Demon-Animated-1-Sheet.png" id="8_axo2t"]
[ext_resource type="FontFile" uid="uid://7jvdsijkjmcl" path="res://fonts/NESCyrillic.ttf" id="9_5fkrt"]
[ext_resource type="FontFile" uid="uid://cvy4ahqpj54t0" path="res://fonts/Adventurer.ttf" id="10_o7qsd"]
[ext_resource type="AudioStream" uid="uid://dlf1lmjy4bg3x" path="res://audio/Blackmoor_Colossus_Loop.wav" id="11_qbwgk"]
[ext_resource type="AudioStream" uid="uid://cais5n0j5tw3m" path="res://audio/fout-01.wav" id="12_hjm0n"]
[ext_resource type="AudioStream" uid="uid://b2yvtc61ct3p4" path="res://audio/fout-02.wav" id="13_810fw"]
[ext_resource type="AudioStream" uid="uid://bvwrth2sp64uj" path="res://audio/fout-03.wav" id="14_i752q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xcjfb"]
atlas = ExtResource("8_axo2t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_brsas"]
atlas = ExtResource("8_axo2t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbof2"]
atlas = ExtResource("8_axo2t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eblu"]
atlas = ExtResource("8_axo2t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fbr1"]
atlas = ExtResource("8_axo2t")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn5kq"]
atlas = ExtResource("8_axo2t")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghdn8"]
atlas = ExtResource("8_axo2t")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2txc"]
atlas = ExtResource("8_axo2t")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3uek"]
atlas = ExtResource("8_axo2t")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc7sh"]
atlas = ExtResource("8_axo2t")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4pid"]
atlas = ExtResource("8_axo2t")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0mxd"]
atlas = ExtResource("8_axo2t")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg0x8"]
atlas = ExtResource("8_axo2t")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53njo"]
atlas = ExtResource("8_axo2t")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b36kl"]
atlas = ExtResource("8_axo2t")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_niv0a"]
atlas = ExtResource("8_axo2t")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rwmm"]
atlas = ExtResource("8_axo2t")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mtr0"]
atlas = ExtResource("8_axo2t")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp11w"]
atlas = ExtResource("8_axo2t")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxvvp"]
atlas = ExtResource("8_axo2t")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c46a"]
atlas = ExtResource("8_axo2t")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evs2h"]
atlas = ExtResource("8_axo2t")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne4o2"]
atlas = ExtResource("8_axo2t")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i87jw"]
atlas = ExtResource("8_axo2t")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igu1l"]
atlas = ExtResource("8_axo2t")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48sy"]
atlas = ExtResource("8_axo2t")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln1u1"]
atlas = ExtResource("8_axo2t")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhe20"]
atlas = ExtResource("8_axo2t")
region = Rect2(864, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffh2"]
atlas = ExtResource("8_axo2t")
region = Rect2(896, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d4re"]
atlas = ExtResource("8_axo2t")
region = Rect2(928, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqxjr"]
atlas = ExtResource("8_axo2t")
region = Rect2(960, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ror3c"]
atlas = ExtResource("8_axo2t")
region = Rect2(992, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns1g4"]
atlas = ExtResource("8_axo2t")
region = Rect2(1024, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eg3v"]
atlas = ExtResource("8_axo2t")
region = Rect2(1056, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq1ie"]
atlas = ExtResource("8_axo2t")
region = Rect2(1088, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8u0u"]
atlas = ExtResource("8_axo2t")
region = Rect2(1120, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_st8q4"]
atlas = ExtResource("8_axo2t")
region = Rect2(1152, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxegv"]
atlas = ExtResource("8_axo2t")
region = Rect2(1184, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u2qv"]
atlas = ExtResource("8_axo2t")
region = Rect2(1216, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_louen"]
atlas = ExtResource("8_axo2t")
region = Rect2(1248, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue76a"]
atlas = ExtResource("8_axo2t")
region = Rect2(1280, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l0u1"]
atlas = ExtResource("8_axo2t")
region = Rect2(1312, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3t5s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcjfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brsas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbof2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eblu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fbr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn5kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghdn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2txc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3uek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc7sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4pid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0mxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg0x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53njo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b36kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niv0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rwmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mtr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp11w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxvvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c46a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evs2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne4o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i87jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igu1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln1u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhe20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d4re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqxjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ror3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns1g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eg3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq1ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8u0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st8q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxegv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u2qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_louen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue76a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l0u1")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45ras"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egerx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdryl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y543p"]
bg_color = Color(0.0156863, 0.0156863, 0.0156863, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd030"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.584314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnmc7"]
bg_color = Color(0.741176, 0, 0, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqvec"]
bg_color = Color(0.262745, 0.713726, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Animation" id="Animation_xk8jl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DemonLord:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fd615"]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemonLord:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m86ko"]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(-8, 0), Vector2(6, 0), Vector2(-4, 0), Vector2(2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1adku"]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(30, 0), Vector2(-25, 0), Vector2(15, 0), Vector2(-10, 0), Vector2(5, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n12xu"]
_data = {
"RESET": SubResource("Animation_xk8jl"),
"enemy_damaged": SubResource("Animation_fd615"),
"mini_shake": SubResource("Animation_m86ko"),
"shake": SubResource("Animation_1adku")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbk6v")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("2_i5jaq")

[node name="Enemies" type="Node" parent="."]

[node name="Fighter" parent="Enemies" instance=ExtResource("3_bsfho")]
position = Vector2(168, 246)
enemy = ExtResource("4_ky74l")

[node name="Cleric" parent="Enemies" instance=ExtResource("3_bsfho")]
position = Vector2(168, 429)
enemy = ExtResource("5_avpfh")

[node name="Rogue" parent="Enemies" instance=ExtResource("3_bsfho")]
position = Vector2(1000, 246)

[node name="Mage" parent="Enemies" instance=ExtResource("3_bsfho")]
position = Vector2(1000, 429)
enemy = ExtResource("7_luad1")

[node name="DemonLord" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 343)
scale = Vector2(14, 14)
sprite_frames = SubResource("SpriteFrames_o3t5s")
animation = &"idle"

[node name="ActionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 26.0
offset_right = -26.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26
alignment = 1

[node name="Spells" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Spells"
expand_icon = true

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Defend"
expand_icon = true

[node name="Items" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Items"
expand_icon = true

[node name="SpellsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="Spells" type="HBoxContainer" parent="SpellsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 26.0
offset_right = -26.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26
alignment = 1

[node name="Attack" type="Button" parent="SpellsPanel/Spells"]
layout_mode = 2
tooltip_text = "Basic attack, deals %s damage to one target."
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Fiendish
Fury"

[node name="dreadforge" type="Button" parent="SpellsPanel/Spells"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Increases your damage by 50% for the remainder of the battle."
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Dreadforge
Empowerment"

[node name="InfernalAffliction" type="Button" parent="SpellsPanel/Spells"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Traps one target in a ring of fire, which deals %s damage on each of its turns."
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Infernal
Affliction"

[node name="BloodSiphon" type="Button" parent="SpellsPanel/Spells"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Damage the enemy and restore your health"
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Blood
Siphon
"

[node name="Back" type="Button" parent="SpellsPanel/Spells"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_45ras")
theme_override_styles/hover = SubResource("StyleBoxFlat_egerx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdryl")
text = "Back"

[node name="Textbox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -550.0
offset_top = 26.0
offset_right = 550.0
offset_bottom = 176.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y543p")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 26.0
offset_right = -26.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_o7qsd")
theme_override_font_sizes/font_size = 32
text = "The KNIGHT approaches!"
autowrap_mode = 3

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -57.0
offset_right = -17.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -127.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bd030")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -17.5
offset_right = 520.0
offset_bottom = 17.5
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 52
text = "DEMON LORD"
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel"]
layout_mode = 2
offset_left = 604.0
offset_top = 36.0
offset_right = 1115.0
offset_bottom = 95.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fnmc7")
theme_override_styles/fill = SubResource("StyleBoxFlat_gqvec")
max_value = 1000.0
step = 1.0
value = 1000.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5fkrt")
theme_override_font_sizes/font_size = 33
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n12xu")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_qbwgk")

[node name="SpellSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_hjm0n")

[node name="SpellSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_810fw")

[node name="SpellSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_i752q")

[connection signal="pressed" from="ActionsPanel/Actions/Spells" to="." method="_on_spells_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="SpellsPanel/Spells/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="SpellsPanel/Spells/dreadforge" to="." method="_on_dread_forge_pressed"]
[connection signal="pressed" from="SpellsPanel/Spells/InfernalAffliction" to="." method="_on_infernal_affliction_pressed"]
[connection signal="pressed" from="SpellsPanel/Spells/BloodSiphon" to="." method="_on_blood_siphon_pressed"]
[connection signal="pressed" from="SpellsPanel/Spells/Back" to="." method="_on_back_pressed"]
